<resources>
    <string name="app_name">CST2335</string>
    <string name="hello_message">CST2335 Graphical Interface Programming</string>
    <string name="button_text">Enter</string>
    <string name="login">Login</string>
    <string name="login_name">Login Name</string>
    <string name="password">Password</string>
    <string name="radiobutton">RadioButton</string>
    <string name="checkbox">CheckBox</string>
    <string name="what_does_this_do">What does this do?</string>
    <string name="dialog_message">Do you want to finish the activity?</string>
    <string name="dialog_title">Finish?</string>
    <string name="dialog_positive">Yes</string>
    <string name="start_chat">Enter Message</string>
    <string name="send_button">Send</string>
</resources>
